Retrieved images from backend. Changed api to teddies. Page design improved including adding borders, hover effects, adding more footer content, and changing the color theme.

--- a/frontend/scss/_variable_overrides.scss
+++ b/frontend/scss/_variable_overrides.scss
@@ -3,94 +3,58 @@
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
-// Color system
 
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #6c757d !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
 
-$grays: () !default;
-$grays: map-merge(
-  (
-    "100": $gray-100,
-    "200": $gray-200,
-    "300": $gray-300,
-    "400": $gray-400,
-    "500": $gray-500,
-    "600": $gray-600,
-    "700": $gray-700,
-    "800": $gray-800,
-    "900": $gray-900
-  ),
-  $grays
-);
-
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
-
-$colors: () !default;
-$colors: map-merge(
-  (
-    "blue":       $blue,
-    "indigo":     $indigo,
-    "purple":     $purple,
-    "pink":       $pink,
-    "red":        $red,
-    "orange":     $orange,
-    "yellow":     $yellow,
-    "green":      $green,
-    "teal":       $teal,
-    "cyan":       $cyan,
-    "white":      $white,
-    "gray":       $gray-600,
-    "gray-dark":  $gray-800
-  ),
-  $colors
-);
-
-$primary:       #2E6F9E;
-$secondary:     #DA992F;
-$success:       #A0CED9;
-$info:          #A299FF;
-$warning:       #D89831;
-$danger:        #DC2E39;
-$light:         #F1F8F7;
-$dark:          #313638;
-
-$theme-colors: () !default;
-$theme-colors: map-merge(
-  (
-    "primary":    $primary,
-    "secondary":  $secondary,
-    "success":    $success,
-    "info":       $info,
-    "warning":    $warning,
-    "danger":     $danger,
-    "light":      $light,
-    "dark":       $dark
-  ),
-  $theme-colors
-);
+//  Custom Color system
+$primary:       #A768BA;
+$secondary:     #8F5BFE;
+$success:       #AFDBF4;
+$info:          #76C287;
+$warning:       #E88B1F;
+$danger:        #FF4282;
+$light:         #F3E9F1;
+$dark:          #241628;
 
 
 
+// Set height for images
+img {
+  height: 220px;
+  object-fit: cover;
+}
 
-// Customize the light and dark text colors for use in our YIQ color contrast function.
-$yiq-text-dark:             $gray-900 !default;
-$yiq-text-light:            $white !default;
+.card {
+  border-radius: 15px !important;
+}
+
+.hoverable {
+  &:hover {
+    transform: scale(1.0075);
+  }
+}
+
+img {
+  border-top-left-radius: 15px !important;
+  border-top-right-radius: 15px !important;
+}
+
+
+body {
+  background: rgb(167,104,186);
+  background: linear-gradient(331deg, rgba(167,104,186,0.5578606442577031) 42%, rgba(230,138,8,0.5970763305322129) 100%);
+}
+
+.hero {
+  border-bottom: 1px solid $warning;
+  border-top: 1px solid $warning;
+  width: 100% !important;
+}
+
+.jumbotron-wrapper {
+  padding: 0px !important;
+}
+
+.jumbotron {
+  margin-bottom: 0px !important;
+}
+
