Fixed some margin and alignment issues, adjusted color contrast, added alt text to images.

--- a/css/style.css
+++ b/css/style.css
@@ -23,18 +23,14 @@ body {
   background: linear-gradient(331deg, rgba(167, 104, 186, 0.557861) 42%, rgba(230, 138, 8, 0.597076) 100%);
 }
 
-.hero {
-  border-bottom: 1px solid #E88B1F;
-  border-top: 1px solid #E88B1F;
-  width: 100% !important;
-}
-
-.jumbotron-wrapper {
-  padding: 0px !important;
-}
-
 .jumbotron {
   margin-bottom: 0px !important;
+}
+
+#jumbotron-wrapper {
+  border-top: 1px solid #E88B1F !important;
+  border-bottom: 1px solid #E88B1F !important;
+  text-shadow: 1px 1px 2px #E88B1F;
 }
 
 /*!
@@ -57,7 +53,7 @@ body {
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #A768BA;
+  --primary: #8a4d9c;
   --secondary: #8F5BFE;
   --success: #AFDBF4;
   --info: #76C287;
@@ -193,13 +189,13 @@ sup {
 }
 
 a {
-  color: #A768BA;
+  color: #8a4d9c;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #804393;
+  color: #5d3469;
   text-decoration: underline;
 }
 
@@ -1935,23 +1931,23 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #e6d5ec;
+  background-color: #decde3;
 }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #d1b0db;
+  border-color: #c2a2cc;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #dcc3e4;
+  background-color: #d3bdda;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #dcc3e4;
+  background-color: #d3bdda;
 }
 
 .table-secondary,
@@ -2257,10 +2253,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #dac0e2;
+  border-color: #c29bce;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2784,8 +2780,8 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2803,41 +2799,41 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #974fad;
-  border-color: #8f4ba4;
+  background-color: #734082;
+  border-color: #6c3c7a;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #974fad;
-  border-color: #8f4ba4;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(180, 127, 196, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(180, 127, 196, 0.5);
+  background-color: #734082;
+  border-color: #6c3c7a;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(156, 104, 171, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(156, 104, 171, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #8f4ba4;
-  border-color: #88479b;
+  background-color: #6c3c7a;
+  border-color: #643871;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(180, 127, 196, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(180, 127, 196, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(156, 104, 171, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(156, 104, 171, 0.5);
 }
 
 .btn-secondary {
@@ -3114,37 +3110,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #A768BA;
-  border-color: #A768BA;
+  color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #A768BA;
+  color: #8a4d9c;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3387,12 +3383,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #A768BA;
+  color: #8a4d9c;
   text-decoration: none;
 }
 
 .btn-link:hover {
-  color: #804393;
+  color: #5d3469;
   text-decoration: underline;
 }
 
@@ -3689,7 +3685,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -4088,23 +4084,23 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #A768BA;
-  background-color: #A768BA;
+  border-color: #8a4d9c;
+  background-color: #8a4d9c;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #dac0e2;
+  border-color: #c29bce;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #eee3f2;
-  border-color: #eee3f2;
+  background-color: #d7bdde;
+  border-color: #d7bdde;
 }
 
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
@@ -4154,8 +4150,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #A768BA;
-  background-color: #A768BA;
+  border-color: #8a4d9c;
+  background-color: #8a4d9c;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4163,11 +4159,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(167, 104, 186, 0.5);
+  background-color: rgba(138, 77, 156, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(167, 104, 186, 0.5);
+  background-color: rgba(138, 77, 156, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4179,7 +4175,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(167, 104, 186, 0.5);
+  background-color: rgba(138, 77, 156, 0.5);
 }
 
 .custom-switch {
@@ -4220,7 +4216,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(167, 104, 186, 0.5);
+  background-color: rgba(138, 77, 156, 0.5);
 }
 
 .custom-select {
@@ -4242,10 +4238,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #dac0e2;
+  border-color: #c29bce;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-select:focus::-ms-value {
@@ -4308,9 +4304,9 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #dac0e2;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  border-color: #c29bce;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-file-input[disabled] ~ .custom-file-label,
@@ -4375,16 +4371,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4395,7 +4391,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4414,7 +4410,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #eee3f2;
+  background-color: #d7bdde;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4430,7 +4426,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4449,7 +4445,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #eee3f2;
+  background-color: #d7bdde;
 }
 
 .custom-range::-moz-range-track {
@@ -4468,7 +4464,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4486,7 +4482,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #eee3f2;
+  background-color: #d7bdde;
 }
 
 .custom-range::-ms-track {
@@ -4615,7 +4611,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
 }
 
 .nav-fill > .nav-link,
@@ -5416,14 +5412,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #A768BA;
+  color: #8a4d9c;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #804393;
+  color: #5d3469;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5432,8 +5428,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -5450,8 +5446,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .page-item.disabled .page-link {
@@ -5538,18 +5534,18 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #8f4ba4;
+  background-color: #6c3c7a;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(167, 104, 186, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(138, 77, 156, 0.5);
 }
 
 .badge-secondary {
@@ -5713,17 +5709,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #573661;
-  background-color: #ede1f1;
-  border-color: #e6d5ec;
+  color: #482851;
+  background-color: #e8dbeb;
+  border-color: #decde3;
 }
 
 .alert-primary hr {
-  border-top-color: #dcc3e4;
+  border-top-color: #d3bdda;
 }
 
 .alert-primary .alert-link {
-  color: #3a2440;
+  color: #2a172f;
 }
 
 .alert-secondary {
@@ -5869,7 +5865,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #A768BA;
+  background-color: #8a4d9c;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -5971,8 +5967,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #A768BA;
-  border-color: #A768BA;
+  background-color: #8a4d9c;
+  border-color: #8a4d9c;
 }
 
 .list-group-item + .list-group-item {
@@ -6140,19 +6136,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #573661;
-  background-color: #e6d5ec;
+  color: #482851;
+  background-color: #decde3;
 }
 
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #573661;
-  background-color: #dcc3e4;
+  color: #482851;
+  background-color: #d3bdda;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #573661;
-  border-color: #573661;
+  background-color: #482851;
+  border-color: #482851;
 }
 
 .list-group-item-secondary {
@@ -7194,13 +7190,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #A768BA !important;
+  background-color: #8a4d9c !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #8f4ba4 !important;
+  background-color: #6c3c7a !important;
 }
 
 .bg-secondary {
@@ -7322,7 +7318,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #A768BA !important;
+  border-color: #8a4d9c !important;
 }
 
 .border-secondary {
@@ -10688,11 +10684,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #A768BA !important;
+  color: #8a4d9c !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #804393 !important;
+  color: #5d3469 !important;
 }
 
 .text-secondary {
