--- a/css/style.css
+++ b/css/style.css
@@ -25,12 +25,23 @@ body {
 
 .jumbotron {
   margin-bottom: 0px !important;
+  margin-left: 0px !important;
+  padding-left: 0px !important;
 }
 
 #jumbotron-wrapper {
   border-top: 1px solid #E88B1F !important;
   border-bottom: 1px solid #E88B1F !important;
+}
+
+.h1-shadow {
   text-shadow: 1px 1px 2px #E88B1F;
+}
+
+.section-header-hr {
+  width: 75%;
+  margin-left: 0px;
+  background-color: #E88B1F;
 }
 
 /*!
