--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -85,6 +85,11 @@
           box-shadow: 0 0 0 0.2rem rgba(255, 66, 91, 0.75);
 }
 
+#warning {
+  font-size: 18px;
+  color: #ff425b;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
@@ -10923,4 +10928,3 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
-/*# sourceMappingURL=style.css.map */
